--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,68 +3,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // justify-content: center;
     background-image: linear-gradient(rgb(251, 98, 123), rgb(241, 241, 61));
     color: rgb(29, 31, 24);
 
     @media (max-width: 768px) {
-        display: flex;
-    }
-
-    .hidden{
-        display: none;
-    }
-
-    &__form{
-        width: 300px;
-        margin: auto;
-        &__item{
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 18px;
-            
-            input{
-                padding: 8px 10px;
-                border: none;
-                border-radius: 8px;
-                outline: none;
-            }
-            
-        }
-
-        button{
-            width: 100%;
-            padding: 8px 16px;
-            border: none;
-            border-radius: 8px;
-            background-color: black;
-            color: #fff;
-            cursor: pointer;
-            &:hover{
-                background-color: rgba($color: #000000, $alpha: .8);
-            }
-        }
-        p, span{
-            width: 100%;
-            font-size: 10px;
-            display: inline-block;
-            text-align: center;
-            &::selection{
-                background-color: #000000;
-                color: #fff;
-            }
-        }
-        .exemplo{
-            margin-top: 30px;
-        }
-
+        min-height: 100vh;
+        min-width: 100vw;
     }
 
     &__conterDate{
         max-height:100vh ;
         text-align: center;
         margin: auto;
+        color: rgb(24, 24, 24);
+        
         img{
+            position: relative;
+            top: 0;
             width: 80%;
             height: 40%;
             border-radius: 30px  30px 0 0;
@@ -74,20 +29,44 @@
             line-height: 44px;
         }
         .counter{
+            display: inline-block;
             font-size: 48px;
+            font-weight: 700;
+        
+            padding: 10px 40px;
         }
 
-        button{
-            margin-top: 30px;
-            padding: 10px 20px;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
-            background-color: black;
-            color: #fff;
-            cursor: pointer;
-            &:hover{
-                background-color: rgba($color: #000000, $alpha: .8);
+        .infos-bar{
+            margin-top: 200px;
+            &__infos{
+                max-width: fit-content;
+                margin: auto;
+                padding: 16px;
+                background-color: aliceblue;
+                &__item{
+                    list-style: none;
+                    text-align: start;
+                }
+                .atencao{
+                    margin-top: 18px;
+                    font-size: 18px;
+                    color: red;
+                    
+                }
+            }
+        }
+        @media (max-width: 768px) {
+            padding: 0 30px;
+            .phrase{
+                font-size: 36px;
+                
+            }
+            .counter{
+                font-size: 28px;
+            }
+            img{
+                width: 100%;
+                height: auto;
             }
         }
     }
